[gd_scene load_steps=2 format=3 uid="uid://dfirestore_scene"]

[ext_resource type="Script" path="res://scenes/firestore.gd" id="1_firestore"]

[node name="Firestore" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_firestore")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.133, 0.133, 0.133, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
theme_override_font_sizes/font_size = 28
text = "< Back"

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Cloud Firestore"
horizontal_alignment = 1

[node name="HSeparator1" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CollectionInput" type="LineEdit" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
theme_override_font_sizes/font_size = 24
placeholder_text = "Collection name (e.g. users)"
text = "test_collection"

[node name="DocIdInput" type="LineEdit" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
theme_override_font_sizes/font_size = 24
placeholder_text = "Document ID (optional for add)"
text = "test_doc"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AddDocument" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
theme_override_font_sizes/font_size = 24
text = "Add Document (auto ID)"

[node name="SetDocument" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
theme_override_font_sizes/font_size = 24
text = "Set Document"

[node name="GetDocument" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
theme_override_font_sizes/font_size = 24
text = "Get Document"

[node name="GetCollection" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
theme_override_font_sizes/font_size = 24
text = "Get All Documents"

[node name="UpdateDocument" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
theme_override_font_sizes/font_size = 24
text = "Update Document"

[node name="DeleteDocument" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
theme_override_font_sizes/font_size = 24
text = "Delete Document"

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Listen" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
theme_override_font_sizes/font_size = 24
text = "Listen to Document"

[node name="StopListen" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
theme_override_font_sizes/font_size = 24
text = "Stop Listening"

[node name="HSeparator4" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ClearOutput" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 40)
theme_override_font_sizes/font_size = 22
text = "Clear Output"

[node name="OutputPanel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 20
text = ""
scroll_following = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/BackButton" to="." method="_on_back_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/AddDocument" to="." method="_on_add_document_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SetDocument" to="." method="_on_set_document_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/GetDocument" to="." method="_on_get_document_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/GetCollection" to="." method="_on_get_collection_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/UpdateDocument" to="." method="_on_update_document_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/DeleteDocument" to="." method="_on_delete_document_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Listen" to="." method="_on_listen_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/StopListen" to="." method="_on_stop_listen_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ClearOutput" to="." method="_on_clear_output_pressed"]
